# audio_player

./: Cargo.toml
src/: app.rs  finder.rs  lib.rs  main.rs  player.rs  playlist.rs  view.rs
src/app/: app.rs  types.rs
src/player/: mod.rs  player.rs  playlist.rs
