[package]
name = "audio_player"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21.1"
lofty = "0.22"
rodio = "0.22.2"
thiserror = "2.0.18"

[[bin]]
name = "AudioPlayer"
path = "src/main.rs"

[profile.release]
debug = "line-tables-only"

[rust]
debuginfo-level = 1

[build]
rustflags = ["-C", "force-frame-pointers=yes"]